workloads/steam-lobby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steam-lobby
  namespace: steam-lobby
  labels:
    app: steam-lobby
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: steam-lobby
  template:
    metadata:
      labels:
        app: steam-lobby
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
      - name: steam-lobby
        image: ghcr.io/2143-labs/steam-lobby:43
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: &port 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /health
            port: *port
          initialDelaySeconds: 2
          periodSeconds: 5
          failureThreshold: 3
